[package]
name = "bitcoin"
version = "0.26.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
edition = "2018"
license = "CC0-1.0"
homepage = "https://github.com/rust-bitcoin/rust-bitcoin/"
repository = "https://github.com/rust-bitcoin/rust-bitcoin/"
documentation = "https://docs.rs/bitcoin/"
description = "General purpose library for using and interoperating with Bitcoin and other cryptocurrencies."
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"


[features]
default = [ "mesalock_sgx" ]
base64 = [ "base64-compat" ]
fuzztarget = ["bitcoin_hashes/fuzztarget"]
unstable = []
rand = []
use-serde = ["serde", "bitcoin_hashes/serde"]
# secp-lowmemory = ["secp256k1/lowmemory"]
# secp-recovery = ["secp256k1/recovery"]
mesalock_sgx = [ "sgx_tstd" ]

[dependencies]
bech32 = { branch = "v0.7.2-sgx", git = "https://github.com/Phala-Network/rust-bech32" } # bech32 = "0.7.2"
bitcoin_hashes = { branch = "no_std_serde", git = "https://github.com/Phala-Network/bitcoin_hashes" } # bitcoin_hashes = "0.9.1"
secp256k1= { branch = "0.20.1-sgx", git = "https://github.com/Phala-Network/rust-secp256k1" } # secp256k1 = "0.20.0"
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

base64-compat = { version = "1.0.0", optional = true }
bitcoinconsensus = { version = "0.19.0-1", optional = true }
# serde = { version = "1", features = [ "derive" ], optional = true }
serde = { version = "1.0", default-features = false, features = [ "alloc", "derive" ], optional = true }

[dev-dependencies]
# serde_json = "<1.0.45"
# serde_test = "1"
# secp256k1 = { version = "0.20.0", features = [ "recovery", "rand-std" ] }
# bincode = "1.3.1"
# # We need to pin ryu (transitive dep from serde_json) to stay compatible with Rust 1.22.0
# ryu = "<1.0.5"
